cmake_minimum_required(VERSION 3.30)
project(avoc2019)

set(CMAKE_CXX_COMPILER g++-14)
set(CMAKE_CXX_STANDARD 23)
add_compile_options(-Wall -Wextra -Werror)

add_executable(day01 day01/main.cpp utils/utils.h)
add_executable(day02 day02/main.cpp utils/utils.h)
add_executable(day03 day03/main.cpp utils/utils.h)
add_executable(day04 day04/main.cpp utils/utils.h)
add_executable(day05 day05/main.cpp day05/intcode.h utils/utils.h)
add_executable(day06 day06/main.cpp utils/utils.h)
add_executable(day07 day07/main.cpp day07/intcode.h utils/utils.h)
add_executable(day08 day08/main.cpp utils/utils.h)
