cmake_minimum_required(VERSION 3.30)
project(avoc2019)

set(CMAKE_CXX_COMPILER g++-14)
set(CMAKE_CXX_STANDARD 23)
add_compile_options(-Wall -Wextra -Werror)

add_executable(day01 day01/main.cpp utils/utils.h)
add_executable(day02 day02/main.cpp utils/utils.h)
add_executable(day03 day03/main.cpp utils/utils.h)
add_executable(day04 day04/main.cpp utils/utils.h)
add_executable(day05 day05/main.cpp day05/intcode.h utils/utils.h)
add_executable(day06 day06/main.cpp utils/utils.h)
add_executable(day07 day07/main.cpp day07/intcode.h utils/utils.h)
add_executable(day08 day08/main.cpp utils/utils.h)
add_executable(day09 day09/main.cpp day09/intcode.h utils/utils.h)
add_executable(day10 day10/main.cpp utils/utils.h)
add_executable(day11 day11/main.cpp day09/intcode.h utils/utils.h)
add_executable(day12 day12/main.cpp utils/utils.h)
add_executable(day13 day13/main.cpp utils/utils.h day09/intcode.h)
add_executable(day14 day14/main.cpp utils/utils.h)
add_executable(day15 day15/main.cpp utils/utils.h day09/intcode.h)
add_executable(day16 day16/main.cpp utils/utils.h easyTimer.h)
add_executable(day17 day17/main.cpp utils/utils.h day09/intcode.h)
add_executable(day18 day18/main.cpp utils/utils.h easyTimer.h)

find_package(OpenMP REQUIRED)
target_link_libraries(day16 PRIVATE OpenMP::OpenMP_CXX)